==> feaser/openblt/Target/Demo/ARMCM4_S32K14_S32K144EVB_GCC/Prog/boot.c <==
#include "header.h"                                    /* generic header               */

static void BootComRs232Init(void)
{
  unsigned long        sourceClockFreqHz;
  unsigned long        div2RegValue;
  unsigned short       baudrateSbr0_12;
  unsigned char  const div2DividerLookup[] =
  {
     0U, /* 0b000. Output disabled. */
     1U, /* 0b001. Divide by 1. */
     2U, /* 0b010. Divide by 2. */
     4U, /* 0b011. Divide by 4. */
     8U, /* 0b100. Divide by 8. */
    16U, /* 0b101. Divide by 16. */
    32U, /* 0b110. Divide by 32. */
    64U, /* 0b111. Divide by 64. */
  };

  /* Make sure the UART peripheral clock is disabled before configuring its source
   * clock.
   */
  PCC->PCCn[PCC_LPUARTx_INDEX] &= ~PCC_PCCn_CGC_MASK;
  /* Select option 2 as the UART peripheral source clock and enable the clock. Option 2
   * is the SIRCDIV2_CLK, which is available on all peripherals and configurations.
   */
  PCC->PCCn[PCC_LPUARTx_INDEX] |= PCC_PCCn_PCS(2) | PCC_PCCn_CGC_MASK;
  /* Obtain the DIV2 divider value of the SIRC_CLK. */
  div2RegValue = (SCG->SIRCDIV & SCG_SIRCDIV_SIRCDIV2_MASK) >> SCG_SIRCDIV_SIRCDIV2_SHIFT;
  /* Check if the DIV2 register value for SIRC is 0. In this case SIRCDIV2_CLK is
   * currently disabled.
   */
  if (div2RegValue == 0U)
  {
    /* Configure the DIV2 for a default divide by 1 to make sure the SIRCDIV2_CLK is
     * actually enabled.
     */
    div2RegValue = 1U;
    SCG->SIRCDIV = SCG_SIRCDIV_SIRCDIV2(div2RegValue);
  }
  /* Determine the SIRC clock frequency. If SIRC high range is enabled, it is 8 MHz. If
   * SIRC low range is enabled, it is 2 MHz.
   */
  sourceClockFreqHz = 8000000U;
  if ((SCG->SIRCCFG & SCG_SIRCCFG_RANGE_MASK) == SCG_SIRCCFG_RANGE(0))
  {
    sourceClockFreqHz = 2000000U;
  }
  /* Now process the configured DIV2 divider factor to get the actual frequency of the
   * UART peripheral source clock.
   */
  sourceClockFreqHz /= div2DividerLookup[div2RegValue];
  /* Configure the baudrate from BOOT_COM_RS232_BAUDRATE, taking into account that an
   * oversampling of 8 will be configured. Default 8,n,1 format is used. Integer
   * rounding is used to get the best value for baudrateSbr0_12. Actual baudrate equals
   * sourceClockFreqHz / 8 / baudrateSbr0_12.
   */
  baudrateSbr0_12 = (((sourceClockFreqHz / BOOT_COM_RS232_BAUDRATE) + (8U - 1U)) / 8U) &
                    LPUART_BAUD_SBR_MASK;
  /* OSR=7: Over sampling ratio = 7+1=8.
   * SBNS=0: One stop bit.
   * BOTHEDGE=0: receiver samples only on rising edge.
   * M10=0: Rx and Tx use 7 to 9 bit data characters.
   * RESYNCDIS=0: Resync during rec'd data word supported.
   * LBKDIE, RXEDGIE=0: interrupts disable.
   * TDMAE, RDMAE, TDMAE=0: DMA requests disabled.
   * MAEN1, MAEN2,  MATCFG=0: Match disabled.
   */
  LPUARTx->BAUD = LPUART_BAUD_SBR(baudrateSbr0_12) | LPUART_BAUD_OSR(7);
  /* Clear the error/interrupt flags */
  LPUARTx->STAT = FEATURE_LPUART_STAT_REG_FLAGS_MASK;
  /* Reset all features/interrupts by default */
  LPUARTx->CTRL = 0x00000000;
  /* Reset match addresses */
  LPUARTx->MATCH = 0x00000000;
#if FEATURE_LPUART_HAS_MODEM_SUPPORT
  /* Reset IrDA modem features */
  LPUARTx->MODIR = 0x00000000;
#endif
#if FEATURE_LPUART_FIFO_SIZE > 0U
  /* Reset FIFO feature */
  LPUARTx->FIFO = FEATURE_LPUART_FIFO_RESET_MASK;
  /* Enable the transmit and receive FIFOs. */
  LPUARTx->FIFO |= LPUART_FIFO_TXFE(1) | LPUART_FIFO_RXFE(1);
  /* Set the reception water mark to 0 and the transmitter water mark to 1. */
  LPUARTx->WATER = LPUART_WATER_TXWATER(1) | LPUART_WATER_RXWATER(0);
#endif
  /* Enable transmitter and receiver, no parity, 8 bit char:
   * RE=1: Receiver enabled.
   * TE=1: Transmitter enabled.
   * PE,PT=0: No hw parity generation or checking.
   * M7,M,R8T9,R9T8=0: 8-bit data characters.
   * DOZEEN=0: LPUART enabled in Doze mode.
   * ORIE,NEIE,FEIE,PEIE,TIE,TCIE,RIE,ILIE,MA1IE,MA2IE=0: no IRQ.
   * TxDIR=0: TxD pin is input if in single-wire mode.
   * TXINV=0: Transmit data not inverted.
   * RWU,WAKE=0: normal operation; rcvr not in standby.
   * IDLCFG=0: one idle character.
   * ILT=0: Idle char bit count starts after start bit.
   * SBK=0: Normal transmitter operation - no break char.
   * LOOPS,RSRC=0: no loop back.
   */
  LPUARTx->CTRL = LPUART_CTRL_RE_MASK | LPUART_CTRL_TE_MASK;
}

static unsigned char Rs232ReceiveByte(unsigned char *data)
{
  unsigned char result = 0;

  /* Check if a new byte was received by means of the RDRF-bit. */
  if (((LPUARTx->STAT & LPUART_STAT_RDRF_MASK) >> LPUART_STAT_RDRF_SHIFT) != 0U)
  {
    /* Retrieve and store the newly received byte. */
    *data = LPUARTx->DATA;
    /* Update the result. */
    result = 1;
  }
  
  /* Give the result back to the caller. */
  return result;
}

static void BootComCanInit(void)
{
  unsigned short prescaler = 0;
  tCanBusTiming  timingCfg = { 0 };
  unsigned char  rjw;
  unsigned short idx;
  unsigned long  timeout;
  unsigned long  rxMsgId  = BOOT_COM_CAN_RX_MSG_ID;

  /* Enable the CAN peripheral clock. */
  PCC->PCCn[PCC_FlexCANx_INDEX] |= PCC_PCCn_CGC_MASK;

  /* The source clock needs to be configured first. For this the CAN controller must be
   * in disabled mode, but that can only be entered after first entering freeze mode,
   * which in turn can only be in enabled mode. So first enable the module, then goto
   * freeze mode and finally enter disabled mode.
   */
  CanDisabledModeExit();
  CanFreezeModeEnter();
  CanDisabledModeEnter();
  /* Configure SOSCDIV2 as the source clock. This assumes that an external oscillator
   * is available, which is typically the case to meet the clock tolerance requirements
   * of the CAN 2.0B secification.
   */
  CANx->CTRL1 &= ~CAN_CTRL1_CLKSRC_MASK;
  /* Leave disabled mode. */
  CanDisabledModeExit();
  /* Make sure freeze mode is active to be able to initialize the CAN controller. */
  CanFreezeModeEnter();

  /* Obtain bittiming configuration information. */
  (void)CanGetSpeedConfig(BOOT_COM_CAN_BAUDRATE/1000, &prescaler, &timingCfg);

  /* Reset the current bittiming configuration. */
  CANx->CTRL1 &= ~(CAN_CTRL1_PRESDIV_MASK | CAN_CTRL1_PROPSEG_MASK |
                   CAN_CTRL1_PSEG1_MASK | CAN_CTRL1_PSEG2_MASK | CAN_CTRL1_RJW_MASK |
                   CAN_CTRL1_SMP_MASK);
  /* Configure the baudrate prescaler. */
  CANx->CTRL1 |= CAN_CTRL1_PRESDIV(prescaler - 1U);
  /* Configure the propagation segment. */
  CANx->CTRL1 |= CAN_CTRL1_PROPSEG(timingCfg.propSeg - 1U);
  /* Configure the phase segments. */
  CANx->CTRL1 |= CAN_CTRL1_PSEG1(timingCfg.phaseSeg1 - 1U);
  CANx->CTRL1 |= CAN_CTRL1_PSEG2(timingCfg.phaseSeg2 - 1U);
  /* The resynchronization jump width (RJW) can be 1 - 4 TQ, yet should never be larger
   * than pseg1. Configure the longest possible value for RJW.
   */
  rjw = (timingCfg.phaseSeg1 < 4) ? timingCfg.phaseSeg1 : 4;
  CANx->CTRL1 |= CAN_CTRL1_RJW(rjw - 1U);
  /* All the entries in canTiming[] have a PSEG1 >= 2, so three samples can be used to
   * determine the value of the received bit, instead of the default one.
   */
  CANx->CTRL1 |= CAN_CTRL1_SMP(1U);

  /* Clear the message box RAM. Each message box covers 4 words (1 word = 32-bits. */
  for (idx = 0; idx < (CANx_MAX_MB_NUM * 4U); idx++)
  {
    CANx->RAMn[idx] = 0U;
  }
  /* Clear the reception mask register for each message box. */
  for (idx = 0; idx < CANx_MAX_MB_NUM; idx++)
  {
    CANx->RXIMR[idx] = 0U;
  }
  /* Configure the maximum number of message boxes. */
  CANx->MCR = (CANx->MCR & ~CAN_MCR_MAXMB_MASK) | CAN_MCR_MAXMB(CANx_MAX_MB_NUM - 1U);
  /* Disable the self reception feature. */
  CANx->MCR = (CANx->MCR & ~CAN_MCR_SRXDIS_MASK) | CAN_MCR_SRXDIS(1U);

  /* Enable individual reception masking. This disables the legacy support for the
   * global reception mask and the mailbox 14/15 individual reception mask.
   */
  CANx->MCR = (CANx->MCR & ~CAN_MCR_IRMQ_MASK) | CAN_MCR_IRMQ(1U);
  /* Disable the reception FIFO. This driver only needs to receive one CAN message
   * identifier. It is sufficient to use just one dedicated mailbox for this.
   */
  CANx->MCR &= ~CAN_MCR_RFEN_MASK;
  /* Configure the mask of the invididual message reception mailbox to check all ID bits
   * and also the IDE bit.
   */
  CANx->RXIMR[CAN_RX_MSGBOX_NUM] = 0x40000000U | 0x1FFFFFFFU;
  /* Configure the reception mailbox to receive just the CAN message configured with
   * BOOT_COM_CAN_RX_MSG_ID.
   *   EDL, BRS, ESI=0: CANFD not used.
   *   CODE=0b0100: mailbox set to active and empty.
   *   IDE=0: 11-bit CAN identifier.
   *   SRR, RTR, TIME STAMP=0: not applicable.
   */
  CANx->RAMn[(CAN_RX_MSGBOX_NUM * 4U) + 0U] = 0x04000000;
  /* Store the message identifier to receive in the mailbox RAM. */
  if ((rxMsgId & 0x80000000U) != 0U)
  {
    /* It is a 29-bit extended CAN identifier. */
    rxMsgId &= ~0x80000000U;
    /* Set the IDE bit to configure the message for a 29-bit identifier. */
    CANx->RAMn[(CAN_RX_MSGBOX_NUM * 4U) + 0U] |= CAN_WMBn_CS_IDE_MASK;
    /* Store the 29-bit CAN identifier. */
    CANx->RAMn[(CAN_RX_MSGBOX_NUM * 4U) + 1U] = CAN_WMBn_ID_ID(rxMsgId);
  }
  else
  {
    /* Store the 11-bit CAN identifier. */
   CANx->RAMn[(CAN_RX_MSGBOX_NUM * 4U) + 1U] = CAN_WMBn_ID_ID(rxMsgId << 18U);
  }

  /* Disable all message box interrupts. */
  CANx->IMASK1 = 0U;
  /* Clear all mesasge box interrupt flags. */
  CANx->IFLAG1 = CAN_IMASK1_BUF31TO0M_MASK;
  /* Clear all error interrupt flags */
  CANx->ESR1 = CAN_ESR1_ERRINT_MASK | CAN_ESR1_BOFFINT_MASK | CAN_ESR1_RWRNINT_MASK |
               CAN_ESR1_TWRNINT_MASK | CAN_ESR1_BOFFDONEINT_MASK |
               CAN_ESR1_ERRINT_FAST_MASK | CAN_ESR1_ERROVR_MASK;

  /* Switch to normal user mode. */
  CANx->MCR &= ~CAN_MCR_SUPV_MASK;
  CANx->CTRL1 &= ~(CAN_CTRL1_LOM_MASK | CAN_CTRL1_LPB_MASK);
  /* Exit freeze mode. */
  CanFreezeModeExit();
  /* Set timeout time for entering normal user mode. */
  timeout = TimerGet() + CAN_INIT_TIMEOUT_MS;
  /* Wait for normal user mode acknowledgement. */
  while (((CANx->MCR & CAN_MCR_NOTRDY_MASK)) != 0U)
  {
    /* Break loop upon timeout. This would indicate a hardware failure. */
    if (TimerGet() > timeout)
    {
      break;
    }
  }
}

static void BootComCanCheckActivationRequest(void)
{
  unsigned char * pMsgBoxData;
  unsigned char   byteIdx;
  unsigned char   rxMsgData[8];
  unsigned char   rxMsgLen;

  /* Check if a message was received in the individual mailbox configured to receive
   * the BOOT_COM_CAN_RX_MSG_ID message.
   */
  if ((CANx->IFLAG1 & (1U << CAN_RX_MSGBOX_NUM)) != 0U)
  {
    /* Note that there is no need to verify the identifier of the CAN message because the
     * mailbox is configured to only receive the BOOT_COM_CAN_TX_MSG_ID message. Start
     * by reading out the DLC of the newly received CAN message.
     */
    rxMsgLen = (CANx->RAMn[(CAN_RX_MSGBOX_NUM * 4U) + 0U] & CAN_WMBn_CS_DLC_MASK) >> CAN_WMBn_CS_DLC_SHIFT;
    /* Read the data bytes of the CAN message from the mailbox RAM. */
    pMsgBoxData = (unsigned char *)(&CANx->RAMn[(CAN_RX_MSGBOX_NUM * 4U) + 2U]);
    for (byteIdx = 0; byteIdx < rxMsgLen; byteIdx++)
    {
      rxMsgData[byteIdx] = pMsgBoxData[((byteIdx) & ~3U) + (3U - ((byteIdx) & 3U))];
    }
    /* Clear the mailbox interrupt flag by writing a 1 to the corresponding box. */
    CANx->IFLAG1 = (1U << CAN_RX_MSGBOX_NUM);
    /* Read the free running timer to unlock the mailbox. */
    dummyTimerVal = CANx->TIMER;

    /* check if this was an XCP CONNECT command */
    if ((rxMsgData[0] == 0xff) && (rxMsgLen == 2))
    {
      /* connection request received so start the bootloader */
      BootActivate();
    }
  }
}
