==> feaser/openblt/uart_refactoring/Target/Demo/ARMCM3_LM3S_EK_LM3S8962_GCC/Prog/boot.c <==
#include "header.h"                                    /* generic header               */

static void BootComRs232Init(void)
{
  /* enable the UART0 peripheral */
  SysCtlPeripheralEnable(SYSCTL_PERIPH_UART0);
  /* enable the and configure UART0 related peripherals and pins */
  SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOA);
  GPIOPinTypeUART(GPIO_PORTA_BASE, GPIO_PIN_0 | GPIO_PIN_1);
  /* configure the UART0 baudrate and communication parameters */
  UARTConfigSetExpClk(UART0_BASE, SysCtlClockGet(), BOOT_COM_RS232_BAUDRATE,
                      (UART_CONFIG_WLEN_8 | UART_CONFIG_STOP_ONE | 
                      UART_CONFIG_PAR_NONE));
}

static unsigned char Rs232ReceiveByte(unsigned char *data)
{
  signed long result;

  /* try to read a newly received byte */
  result = UARTCharGetNonBlocking(UART0_BASE);
  /* check if a new byte was received */
  if(result != -1)
  {
    /* store the received byte */
    *data = (unsigned char)result;
    /* inform caller of the newly received byte */
    return 1;
  }
  /* inform caller that no new data was received */
  return 0;
}

static void BootComCanInit(void)
{
  tCANMsgObject rxMsgObject;

  /* configure the CAN pins */
  SysCtlPeripheralEnable(SYSCTL_PERIPH_GPIOD);
  GPIOPinTypeCAN(GPIO_PORTD_BASE, GPIO_PIN_0 | GPIO_PIN_1);
  /* enable the CAN controller */
  SysCtlPeripheralEnable(SYSCTL_PERIPH_CAN0);
  /* reset the state of the CAN controller, including the message objects */
  CANInit(CAN0_BASE);
  /* set the bittiming */
  CanSetBittiming();
  /* take the CAN controller out of the initialization state */
  CANEnable(CAN0_BASE);
  /* setup message object 1 to receive the BOOT_COM_CAN_RX_MSG_ID message*/
  rxMsgObject.ulMsgID = BOOT_COM_CAN_RX_MSG_ID;
  rxMsgObject.ulMsgIDMask = 0x7ff;
  rxMsgObject.ulFlags = MSG_OBJ_USE_ID_FILTER;
  rxMsgObject.ulMsgLen = 8;
  /* is it a 29-bit extended CAN identifier? */
  if ((BOOT_COM_CAN_RX_MSG_ID & 0x80000000) != 0)
  {
    /* configure reception acceptance filter for 29-bit CAN identifier. */
    rxMsgObject.ulMsgID &= ~0x80000000;
    rxMsgObject.ulMsgIDMask = 0x1fffffff;
    rxMsgObject.ulFlags |= MSG_OBJ_EXTENDED_ID;
  }
  CANMessageSet(CAN0_BASE, CAN_RX_MSGOBJECT_IDX+1, &rxMsgObject, MSG_OBJ_TYPE_RX);
}

static void BootComCanCheckActivationRequest(void)
{
  unsigned long status;
  tCANMsgObject msgObject;
  unsigned char msgData[8];

  /* get bitmask of message objects with new data */
  status = CANStatusGet(CAN0_BASE, CAN_STS_NEWDAT);
  /* check if the BOOT_COM_CAN_RX_MSG_ID message was received */
  if ((status & canBitNum2Mask[CAN_RX_MSGOBJECT_IDX]) != 0)
  {
    /* read the message data */
    msgObject.pucMsgData = msgData;
    CANMessageGet(CAN0_BASE, CAN_RX_MSGOBJECT_IDX+1, &msgObject, true);
    /* check if this was an XCP CONNECT command */
    if ((msgData[0] == 0xff) && (msgObject.ulMsgLen == 2))
    {
      /* connection request received so start the bootloader */
      BootActivate();
    }
  }
}
